--- a/ping_pong.css
+++ b/ping_pong.css
@@ -2,17 +2,27 @@
     position: relative;
 }
 
+body {
+    background: #000000;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #434343, #000000);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #434343, #000000);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
 #ball {
     width: 20px;
     height: 20px;
-    background-color: red;
+    background-color: orange;
     position: fixed;
     top: 20px;
     left: 49%;
     border-radius: 50%;
 }
 
-#rod1, #rod2 {
+#rod1,
+#rod2 {
     width: 200px;
     height: 20px;
     position: fixed;
@@ -24,8 +34,8 @@
 }
 
 #rod1 {
-    background-color: blue;
-    top: 0px;    
+    background-color: black;
+    top: 0px;
 }
 
 #rod2 {
