--- a/ping_pong.css
+++ b/ping_pong.css
@@ -5,16 +5,16 @@
 body {
     background: #000000;
     /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #434343, #000000);
+    background: -webkit-linear-gradient(to right, #1D3461, #247BA0);
     /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #434343, #000000);
+    background: linear-gradient(to right,  #1D3461, #247BA0);
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 #ball {
     width: 20px;
     height: 20px;
-    background-color: orange;
+    background-color: #FB3640;
     position: fixed;
     top: 20px;
     left: 49%;
